minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-service
spec:
  type: NodePort
  ports:
    - name: minio-api
      port: 9000
      targetPort: 9000
      nodePort: 30667
    - name: minio-console
      port: 9090
      targetPort: 9090
      nodePort: 31382
  selector:
    app: minio
