ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /minio
            pathType: Prefix
            backend:
              service:
                name: minio-service
                port:
                  number: 9000
